# HW-Logs-analyser

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: analyser-ci.yml
config/: log_analyser.json
src/: log_analyser.py
tests/: test_log_analyser.py
tests/plain/: nginx-access-ui.log-20170630
